--- a/air-bnb/src/pages/user/auth/register/css/DangKy.css
+++ b/air-bnb/src/pages/user/auth/register/css/DangKy.css
@@ -1,16 +1,16 @@
 /* Nhat.css */
-.dangky-container {
+/* .dangky-container {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Màu nền mờ */
-  color: white; /* Màu chữ trắng */
-  z-index: 2; /* Thiết lập z-index cao hơn để hiển thị đè lên Home */
+  background-color: rgba(0, 0, 0, 0.5); 
+  color: white; 
+  z-index: 2; 
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: center
   align-items: center;    
 }
   
@@ -22,4 +22,4 @@
   position: absolute;
   top: 20px;
   right: 20px;
-}
+} */
