--- a/air-bnb/src/pages/user/auth/login/css/DangNhap.css
+++ b/air-bnb/src/pages/user/auth/login/css/DangNhap.css
@@ -1,25 +1,14 @@
-/* Nhat.css */
-/* .dangnhap-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white; 
-    z-index: 2; 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
+/* Thiết bị nhỏ (sm) iphone */
+@media only screen and (max-width: 575px) {
+
+}
+
+/* Thiết bị trung bình (md) ipad */
+@media only screen and (min-width: 576px) and (max-width: 991px) {
   
-  .hidden {
-    display: none;
-  }
+}
+
+/* Thiết bị lớn (lg) laptop */
+@media only screen and (min-width: 992px) {
   
-  .close-button {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-  } */
+}
