--- a/air-bnb/src/index.css
+++ b/air-bnb/src/index.css
@@ -13,3 +13,36 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* Thiết bị nhỏ (sm) iphone */
+@media only screen and (max-width: 575px) {
+  body {
+      background-color: lightblue;
+  }
+
+  #header {
+    background-color: lightblue !important;
+  }
+}
+
+/* Thiết bị trung bình (md) ipad */
+@media only screen and (min-width: 576px) and (max-width: 991px) {
+  body {
+      background-color: lightgreen;
+  }
+
+  #header {
+    background-color: lightgreen !important;
+  }
+}
+
+/* Thiết bị lớn (lg) laptop */
+@media only screen and (min-width: 992px) {
+  body {
+      background-color: lightcoral;
+  }
+
+  #header {
+      background-color: lightcoral !important;
+  }
+}
