--- a/air-bnb/src/pages/user/home/_components/css/Header.css
+++ b/air-bnb/src/pages/user/home/_components/css/Header.css
@@ -31,6 +31,7 @@
   #ul-menu li a:focus {
     color: #fe6b6e !important;
     /* border-bottom: 3px solid #fe6b6e; */
+    /* background-color: red; */
   }
 
   .ul-profile-sm {
@@ -59,7 +60,7 @@
 /* Thiết bị lớn (lg) laptop */
 @media only screen and (min-width: 992px) {
   #header {
-    padding: 0.2rem 0 !important;
+    /* padding: 0.2rem 0 !important; */
     display: grid;
     grid-template-columns: 30% 40% 30%;
   }
@@ -69,24 +70,28 @@
   }
 
   #logo {
-    font-weight: 900;
-    font-size: xx-large;
+    font-weight: 500;
+    font-size: x-large;
     margin-bottom: 0.4rem;
   }
 
   #logo-img {
-    width: 3rem;
+    width: 2rem;
   }
 
   #ul-menu {
     margin: auto;
   }
 
+  #ul-menu li {
+    margin: 0 0.2rem;
+  }
+
   #ul-menu li a {
-    padding: 1rem;
+    /* padding: 1rem; */
     border-bottom: 3px solid #ffffff;
     font-weight: 500;
-    font-size: larger;
+    font-size: medium;
   }
 
   #ul-menu li a:hover {
@@ -101,13 +106,13 @@
   }
 
   #ul-profile {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    /* display: grid;
+    grid-template-columns: 1fr 1fr; */
     margin: auto;
   }
 
   #ul-profile li {
-    margin: 0 0.5rem;
+    margin: 0 0.2rem;
   }
 
   #ul-profile li:hover {
@@ -115,10 +120,12 @@
   }
 
   #ul-profile li a {
-    padding-left: 0;
-    padding-right: 0;
-    padding: 1.18rem;
+    /* padding-left: 0; */
+    /* padding-right: 0; */
+    padding: 0.5rem 0;
     border-bottom: 3px solid #ffffff;
+    font-size: medium;
+    font-weight: 500;
   }
 
   #ul-profile li a:hover {
@@ -130,9 +137,9 @@
   #ul-profile li button {
     width: 100%;
     font-weight: 500;
-    font-size: large;
+    font-size: medium;
     border-bottom: 3px solid #ffffff;
-    padding: 1.09rem;
+    /* padding: 1.09rem 0; */
   }
 
   #ul-profile li button:hover {
