--- a/air-bnb/src/pages/user/home/trang-chu/css/Search.css
+++ b/air-bnb/src/pages/user/home/trang-chu/css/Search.css
@@ -14,10 +14,13 @@
 
 /* all */
 #search {
-    width: 100%;
+    /* width: 100%; */
     text-align: center;
     position: fixed;
     z-index: 9 !important;
+    /* background-color: red; */
+    width: 100%;
+    transition: opacity 0.3s ease;
 }
 
 #search input {
@@ -26,8 +29,9 @@
     border-radius: 2rem;
     box-shadow: 0px 0px 10px 0px #fe6b6d3b;
     border: 1px solid #fe6b6d3b;
-    transition: opacity 0.3s ease;
-    /* opacity: 0; */
+    /* margin: auto; */
+    /* background-color: yellow; */
+    /* width: 100%; */
 }
 
 #search input:focus {
