--- a/air-bnb/src/pages/user/home/trang-chu/css/Search.css
+++ b/air-bnb/src/pages/user/home/trang-chu/css/Search.css
@@ -10,7 +10,7 @@
         /* background-color: #fe6b6d3b; */
         width: 90%;
     }
-  }
+}
 
 @media only screen and (min-width: 992px) {
     #search input {
@@ -30,7 +30,7 @@
     transition: opacity 0.3s ease;
 }
 
-#search input {
+#search>input {
     padding: 0.5rem 1rem;
     margin: 0.2rem 0;
     border-radius: 2rem;
