--- a/air-bnb/src/pages/user/home/trang-chu/css/Search.css
+++ b/air-bnb/src/pages/user/home/trang-chu/css/Search.css
@@ -73,7 +73,7 @@
     background-color: #ffffff;
     padding: 0.5rem 1rem;
     width: 90%;
-    margin-top: 1px;
+    margin-top: 0.2rem;
     border-radius: 2rem;
     text-align: left;
 }
