--- a/air-bnb/src/pages/user/home/_components/css/Header.css
+++ b/air-bnb/src/pages/user/home/_components/css/Header.css
@@ -19,7 +19,8 @@
     width: 100%;
     z-index: 99;
     position: fixed;
-    top: 3.5rem;
+    top: 3rem;
+    /* background-color: red; */
   }
 
   #ul-menu {
@@ -37,7 +38,7 @@
     width: 50%;
     z-index: 999;
     position: fixed;
-    top: 3.5rem;
+    top: 3rem;
   }
 
   #ul-profile {
