--- a/air-bnb/src/pages/user/home/_components/header/css/Header.css
+++ b/air-bnb/src/pages/user/home/_components/header/css/Header.css
@@ -161,3 +161,8 @@
   color: #fe6b6e !important;
   margin-right: 0;
 }
+
+.active-li-menu {
+  color: #fe6b6e !important;
+  border-bottom: 3px solid #fe6b6e !important;
+}
