--- a/air-bnb/src/pages/user/home/_components/header/css/Header.css
+++ b/air-bnb/src/pages/user/home/_components/header/css/Header.css
@@ -38,7 +38,7 @@
 
   .ul-profile-sm {
     position: absolute;
-    right: 0;
+    right: 0.15rem;
     width: 50%;
     z-index: 999;
     position: fixed;
