--- a/air-bnb/src/pages/user/home/_components/header/css/Header.css
+++ b/air-bnb/src/pages/user/home/_components/header/css/Header.css
@@ -43,6 +43,7 @@
     transition: color 0.2s ease, border-bottom-color 0.2s ease;
     height: 100%;
     align-content: center;
+    padding: 0 2rem;
   }
 
   #menu-lg a:hover {
