--- a/air-bnb/src/index.css
+++ b/air-bnb/src/index.css
@@ -39,8 +39,20 @@ code {
 
 /* laptop */
 @media only screen and (min-width: 992px) {
-  body {
+  body{
     zoom: 1.1;
+  }
+
+  #menu-slide {
+    zoom: 1.1;
+  }
+
+  #khamPha-menu {
+    zoom: 0.8;
+  }
+
+  #footer{
+    zoom: 0.8 !important;
   }
 }
 
