--- a/air-bnb/src/index.css
+++ b/air-bnb/src/index.css
@@ -44,11 +44,15 @@ code {
   }
 
   #menu-slide {
-    zoom: 1.1;
+    zoom: 1.2;
   }
 
   #khamPha-menu {
     zoom: 0.8;
+  }
+
+  #danhSachPhongThue{
+    zoom: 1.1
   }
 
   #footer{
