--- a/air-bnb/src/pages/user/home/danh-sach-phong/DanhSachPhong.css
+++ b/air-bnb/src/pages/user/home/danh-sach-phong/DanhSachPhong.css
@@ -5,3 +5,33 @@
 a:hover{
     text-decoration: none;
 }
+
+/* #icon-yeu-thich i{
+    color: red !important;
+}
+
+#icon-yeu-thich:hover i{
+    color: red !important;
+}
+
+#icon-yeu-thich:focus i{
+    color: red !important;
+} */
+
+#icon {
+    color: black;
+    position: absolute;
+}
+
+#icon:hover{
+    color: red;
+    cursor: pointer;
+}
+
+#icon:focus{
+    color: red !important;
+}
+
+#item {
+    cursor: pointer;
+}
