--- a/air-bnb/src/pages/user/home/danh-sach-phong/DanhSachPhong.css
+++ b/air-bnb/src/pages/user/home/danh-sach-phong/DanhSachPhong.css
@@ -35,3 +35,9 @@ a:hover{
 #item {
     cursor: pointer;
 }
+
+#daucham{
+    font-size: 5px;
+    margin-bottom: 5px !important;
+    padding-bottom: 5px;
+}
