--- a/air-bnb/src/pages/user/home/trang-chu/btn-move-top/css/MoveTop.css
+++ b/air-bnb/src/pages/user/home/trang-chu/btn-move-top/css/MoveTop.css
@@ -12,6 +12,7 @@
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     outline: none;
     transition: background-color 0.3s, transform 0.3s;
+    z-index: 99999;
 }
 
 .back-to-top-button:hover {
