--- a/air-bnb/src/pages/user/home/_components/header/Header.css
+++ b/air-bnb/src/pages/user/home/_components/header/Header.css
@@ -24,6 +24,10 @@
     color: #fe6b6e !important;
   }
 
+  #logo-img{
+    /* object-fit: none !important; */
+  }
+
   /* menu-laptop */
   #menu-lg {
     /* background-color: yellow; */
